# dashy

./: .env  .flake8  .gitignore  LICENSE  MANIFEST  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
apps/: bootstrap_app.py  demo.py  torchlight.py
assets/: main.css
dashy/: __init__.py  components.py  config.py  dashy.py  layout_builder.py  theme.py  themes.py  utils.py
dashy/assets/: bootstrap.css  main.css  main.sass  main.scss  utils.css
dashy/components/: __init__.py  attributes.py  core.py  helpers.py  layout.py  navigation.py  slider.py  table.py  upload.py
examples/: modal.py  overview.py  overview_dash.py  popovers.py  sidebar.py  spinner.py  tabs.py
src/dashy/: __init__.py  __main__.py  config.py  dashy.py  themes.py  utils.py
src/dashy/assets/: custom.css
src/dashy/components/: __init__.py  attributes.py  core.py  helpers.py  layout.py  navigation.py  slider.py  table.py  upload.py
