[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-dashy"
version = "0.0.1"
description = "Easy-to-use data visualization framework"
readme = "README.md"
authors = [{ name = "Toni Axelsson", email = "toniaxelsson@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["visualization", "web", "data science"]
dependencies = [
    "dash >= 2.6.1",
    "dash-bootstrap-components >= 1.2.1",
    "libsass >= 0.21.0",
    "pandas >= 1.4.3"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["flake8", "pytest", "black", "bumpver", "build", "twine"]

[project.urls]
homepage = "https://github.com/wynss/dashy"

[project.scripts]
dashy = "dashy.__main__:description"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
